# chxsql

./: .gitignore  .gitmodules  configure.ac
include/chx/sql/: mysql.hpp  postgresql.hpp
include/chx/sql/hiredis/: adaptor.hpp  connection.hpp  object.hpp  reply.hpp
include/chx/sql/hiredis/impl/: connection.ipp
include/chx/sql/mysql/: async_mysql.hpp  basic_types.hpp  capabilities_flags.hpp  connection.hpp  data_mapper.hpp  data_setter.hpp  data_types.hpp  error_code.hpp  exception.hpp  result_set.hpp  struct_mapper.hpp
include/chx/sql/mysql/detail/: basic_packet.hpp  com_query2.ipp  connection2.ipp  fixed_integer.hpp  hash_ctx.hpp  length_encoded.hpp  result.hpp
include/chx/sql/mysql/detail/packets/: ColumnCount_Packet.hpp  ColumnDefinition41_Packet.hpp  EOF_Packet.hpp  ERR_Packet.hpp  HandshakeV10_Packet.hpp  OK_Packet.hpp  Resultset_Packet.hpp  basic_types.hpp
include/chx/sql/mysql/impl/: auth_plugin.hpp  basic_rules.hpp  com_query.ipp  connection_phase.ipp  packet.hpp  visitor.hpp
include/chx/sql/mysql/impl/auth/: caching_sha2_password.hpp  hash_ctx.hpp  (+1 more)
include/chx/sql/postgresql/: connection.hpp  error_code.hpp  last.hpp  result.hpp  result_set.hpp
include/chx/sql/postgresql/detail/: authentication_method.hpp  basic_parser.hpp  basic_type.hpp  connect.ipp  create_msg.hpp  encode_param.hpp  execute.ipp  make_success.hpp  message_parser.hpp  msg_types.hpp  oneshot.ipp  overloaded.hpp  parse_query.ipp  result.hpp  simple_query.ipp
include/chx/sql/pq/: async_exec.hpp  cast.hpp  connection.hpp  exception.hpp  pipeline.hpp  result_set.hpp
include/chx/sql/pq/detail/: declval.hpp
include/chx/sql/pq/impl/: async_exec.ipp
test/: Makefile.am  test.cpp
(+22 files in other folders)
